--- a/downloads.html
+++ b/downloads.html
@@ -3,22 +3,22 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Answers to the most asked questions about TechMine" />
+        <meta name="description" content="Download TechMine on your device" />
         <meta name="author" content="" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://www.techmine.io/" />
         <meta property="og:locale" content="en_US" />
         <meta property="og:site_name" content="TechMine" />
-        <meta property="og:title" content="TechMine FAQ" />
-        <meta property="og:description" content="Answers to the most asked questions about TechMine" />
+        <meta property="og:title" content="TechMine Download" />
+        <meta property="og:description" content="Download TechMine on your device" />
         <meta property="og:image" content="https://www.techmine.io/img/TechMine_Banner.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:site" content="@TechMineIO" />
         <meta name="twitter:creator" content="@TechMineIO" />
-        <meta name="twitter:title" content="TechMine FAQ" />
-        <meta name="twitter:description" content="Answers to the most asked questions about TechMine" />
+        <meta name="twitter:title" content="TechMine Download" />
+        <meta name="twitter:description" content="Download TechMine on your device" />
         <meta name="twitter:image" content="https://www.techmine.io/img/TechMine_Banner.png" />
-        <title>TechMine FAQ</title>
+        <title>TechMine Download</title>
         <link rel="icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="apple-touch-icon" href="/img/TechMine.png" />
         <!-- Bootstrap icons-->
@@ -32,132 +32,98 @@
         <link href="css/styles.min.css" rel="stylesheet" />
     </head>
     <body>
-        <div id="content-wrap">
-            <main class="flex-shrink-0"></main>
-            <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
-                <div class="container px-5">
-                    <a class="navbar-brand fw-bold" href="/#page-top">
-                        <img src="/img/TechMineLogo_Color.svg" height="60" width="60" style="margin-top: -35px; margin-bottom: -35px" alt="TM" loading="lazy" />
-                        <span style="font-size: 0">
-                            <span style="font-size: 1.25rem">Tech</span>
-                            <span style="font-size: 1.25rem; color: #2937f0">Mine</span>
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
+            <div class="container px-5">
+                <a class="navbar-brand fw-bold" href="/#page-top">
+                    <img src="/img/TechMineLogo_Color.svg" height="60" width="60" style="margin-top: -35px; margin-bottom: -35px" alt="TM" loading="lazy" />
+                    <span style="font-size: 0">
+                        <span style="font-size: 1.25rem">Tech</span>
+                        <span style="font-size: 1.25rem; color: #2937f0">Mine</span>
+                    </span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" style="border: none; font-size: 32px; box-shadow: none"><i class="bi-list"></i></button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="/downloads.html">Downloads</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="/contact.html">Contact Us</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="https://youtu.be/yYzCuxgX6WQ" target="_blank">Watch Demo</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="https://app.techmine.io">Go To App</a></li>
+                    </ul>
+                    <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
+                        <span class="d-flex align-items-center">
+                            <!--i.bi-chat-text-fill.me-2-->
+                            <span class="small">Get the Beta</span>
                         </span>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" style="border: none; font-size: 32px; box-shadow: none"><i class="bi-list"></i></button>
-                    <div class="collapse navbar-collapse" id="navbarResponsive">
-                        <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
-                            <li class="nav-item"><a class="nav-link me-lg-3" href="/downloads.html">Downloads</a></li>
-                            <li class="nav-item"><a class="nav-link me-lg-3" href="/contact.html">Contact Us</a></li>
-                            <li class="nav-item"><a class="nav-link me-lg-3" href="https://youtu.be/yYzCuxgX6WQ" target="_blank">Watch Demo</a></li>
-                            <li class="nav-item"><a class="nav-link me-lg-3" href="https://app.techmine.io">Go To App</a></li>
-                        </ul>
-                        <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
-                            <span class="d-flex align-items-center">
-                                <!--i.bi-chat-text-fill.me-2-->
-                                <span class="small">Get the Beta</span>
-                            </span>
-                        </button>
-                    </div>
+                    </button>
                 </div>
-            </nav>
-            <!-- Page Content-->
-            <section class="py-5">
-                <div class="container px-5 my-5">
-                    <div class="text-center mb-5">
-                        <h1 class="fw-bolder">Frequently Asked Questions</h1>
-                        <p class="lead fw-normal text-muted mb-0">How can we help you?</p>
-                    </div>
-                    <div class="row gx-5">
-                        <div class="col-xl-8">
-                            <!-- FAQ Accordion 1-->
-                            <!--h2.fw-bolder.mb-3 Account &amp; Billing-->
-                            <div class="accordion mb-5" id="accordionExample">
-                                <div class="accordion-item">
-                                    <h3 class="accordion-header" id="headingOne"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Where are my files stored?</button></h3>
-                                    <div class="accordion-collapse collapse show" id="collapseOne" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                                        <div class="accordion-body">
-                                            <strong>Your files are stored on your device.</strong>
-                                            We do not store your files on our servers and our servers never access any of your files. Your privacy is taken very seriously.
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="accordion-item">
-                                    <h3 class="accordion-header" id="headingTwo"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Does my device need to be on to access my files?</button></h3>
-                                    <div class="accordion-collapse collapse" id="collapseTwo" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                                        <div class="accordion-body">
-                                            <strong>Yes.</strong>
-                                            Your devices need to be on and connected to the internet so that we can facilitate a connection to access your files. If the host device is off or disconnected from the internet, you will only have access to what is cached on your device.
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="accordion-item">
-                                    <h3 class="accordion-header" id="headingThree"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Is this secure?</button></h3>
-                                    <div class="accordion-collapse collapse" id="collapseThree" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                                        <div class="accordion-body">
-                                            <strong>TechMine securely transfers your files.</strong>
-                                            The transfer of data between your devices is secured using dTLS and each device is verified using Ed25519 cryptography.
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="accordion-item">
-                                    <h3 class="accordion-header" id="headingFour"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">What files are supported?</button></h3>
-                                    <div class="accordion-collapse collapse" id="collapseFour" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
-                                        <div class="accordion-body">
-                                            <strong>All files are supported.</strong>
-                                            TechMine can preview text, images, videos, PDFs, and audio. All other file types can be opened natively with the app of your choice. We integrate into your devices file system so that you have the option to choose how you want to open a file.
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="accordion-item">
-                                    <h3 class="accordion-header" id="headingFive"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">Do I have to download an app?</button></h3>
-                                    <div class="accordion-collapse collapse" id="collapseFive" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
-                                        <div class="accordion-body">
-                                            <strong>No.</strong>
-                                            You can use TechMine from the web, although it is strongly recommended to use the app to get access to the full range of features. You can allow the app to have access to specific folders, while you need to specify the files the web has access to. The app can open any file types, while the web version is limited to files that TechMine can preview directly. The app can run in the background, while the web version needs to be open in your browser to send and receive files.
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="accordion-item">
-                                    <h3 class="accordion-header" id="headingSix"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">What is the largest file I can use?</button></h3>
-                                    <div class="accordion-collapse collapse" id="collapseSix" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
-                                        <div class="accordion-body">
-                                            <strong>There is no size limit.</strong>
-                                            You can send and receive any size file as long as the space is available on the device.
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="accordion-item">
-                                    <h3 class="accordion-header" id="headingSeven"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">Why are transfers so much faster when the devices are on the same network?</button></h3>
-                                    <div class="accordion-collapse collapse" id="collapseSeven" aria-labelledby="headingSeven" data-bs-parent="#accordionExample"><div class="accordion-body">If two devices are on the same network, then the transfer does not need to use the internet and can instead use the full speed available on your local network.</div></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4">
-                            <div class="card border-0 bg-light mt-xl-5">
-                                <div class="card-body p-4 py-lg-5">
-                                    <div class="d-flex align-items-center justify-content-center">
-                                        <div class="text-center">
-                                            <div class="h6 fw-bolder">Have more questions?</div>
-                                            <p class="text-muted mb-4">
-                                                Contact us at
-                                                <br />
-                                                <a href="mailto:support@techmine.io">support@techmine.io</a>
-                                            </p>
-                                            <div class="h6 fw-bolder">Follow us</div>
-                                            <a class="fs-5 px-2 link-dark" href="https://twitter.com/TechMineIO"><i class="bi-twitter"></i></a>
-                                            <a class="fs-5 px-2 link-dark" href="https://www.facebook.com/profile.php?id=100085622987447"><i class="bi-facebook"></i></a>
-                                            <a class="fs-5 px-2 link-dark" href="https://www.linkedin.com/company/techmine-io"><i class="bi-linkedin"></i></a>
-                                            <a class="fs-5 px-2 link-dark" href="https://www.youtube.com/channel/UCZgj_JefaCkz1wNoWnpDOuQ"><i class="bi-youtube"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+            </div>
+        </nav>
+        <header class="masthead">
+            <div class="container px-5">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-12">
+                        <!-- Mashead text and app badges-->
+                        <div class="mb-5 mb-lg-0 text-center text-lg-start">
+                            <h1 class="display-1 lh-1 mb-3 text-center">Downloads</h1>
+                            <div class="d-flex flex-column flex-lg-row align-items-center"></div>
                         </div>
                     </div>
                 </div>
-            </section>
-        </div>
+                <!-- Page content-->
+                <section class="py-5">
+                    <div class="container px-5">
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <div class="text-center">
+                                    <i class="bi-windows icon-feature text-gradient d-block mb-3"></i>
+                                    <h3 class="font-alt mb-3">Windows</h3>
+                                    <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="https://app.techmine.io/Installers/Windows/latest/setup.exe" download>
+                                        <span class="d-flex align-items-center"><span class="small">x64 Download</span></span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <div class="text-center">
+                                    <i class="bi-apple icon-feature text-gradient d-block mb-3"></i>
+                                    <h3 class="font-alt mb-3">MacOS</h3>
+                                    <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0 disabled">
+                                        <span class="d-flex align-items-center"><span class="small">Coming Soon!</span></span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <div class="text-center">
+                                    <i class="bi-ubuntu icon-feature text-gradient d-block mb-3"></i>
+                                    <h3 class="font-alt mb-3">Ubuntu</h3>
+                                    <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="https://app.techmine.io/Installers/Linux/latest/techmine.deb" download>
+                                        <span class="d-flex align-items-center"><span class="small">x64 Core Download</span></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <div class="row">
+                            <div class="col-12 col-md-6 mb-3">
+                                <div class="text-center"><img class="app-badge" src="assets/img/google-play-badge.svg" alt="..." style="opacity: 0.5" /></div>
+                            </div>
+                            <div class="col-12 col-md-6 mb-3">
+                                <div class="text-center"><img class="app-badge" src="assets/img/app-store-badge.svg" alt="..." style="opacity: 0.5" /></div>
+                            </div>
+                        </div>
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                    </div>
+                </section>
+            </div>
+        </header>
         <!-- Footer-->
         <footer class="bg-black text-center py-5">
             <div class="container-fluid px-5">
