--- a/downloads.html
+++ b/downloads.html
@@ -109,7 +109,9 @@
                         <br />
                         <div class="row">
                             <div class="col-12 col-md-6 mb-3">
-                                <div class="text-center"><img class="app-badge" src="assets/img/google-play-badge.svg" alt="..." style="opacity: 0.5" /></div>
+                                <div class="text-center">
+                                    <a class="me-lg-3 mb-4 mb-lg-0" href="https://play.google.com/store/apps/details?id=io.techmine.techmine" target="_blank"><img class="app-badge" src="assets/img/google-play-badge.svg" alt="..." /></a>
+                                </div>
                             </div>
                             <div class="col-12 col-md-6 mb-3">
                                 <div class="text-center"><img class="app-badge" src="assets/img/app-store-badge.svg" alt="..." style="opacity: 0.5" /></div>
