--- a/downloads.html
+++ b/downloads.html
@@ -79,7 +79,7 @@
                                     <i class="bi-windows icon-feature text-gradient d-block mb-3"></i>
                                     <h3 class="font-alt mb-3">Windows</h3>
                                     <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="https://app.techmine.io/Installers/Windows/latest/setup.exe" download>
-                                        <span class="d-flex align-items-center"><span class="small">x64 Download</span></span>
+                                        <span class="d-flex align-items-center"><span class="small">x64 exe Download</span></span>
                                     </a>
                                 </div>
                             </div>
@@ -95,9 +95,9 @@
                             <div class="col-12 col-md-4">
                                 <div class="text-center">
                                     <i class="bi-ubuntu icon-feature text-gradient d-block mb-3"></i>
-                                    <h3 class="font-alt mb-3">Ubuntu</h3>
+                                    <h3 class="font-alt mb-3">Linux</h3>
                                     <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="https://app.techmine.io/Installers/Linux/latest/techmine.deb" download>
-                                        <span class="d-flex align-items-center"><span class="small">x64 Core Download</span></span>
+                                        <span class="d-flex align-items-center"><span class="small">x64 deb Core Download</span></span>
                                     </a>
                                 </div>
                             </div>
