--- a/downloads.html
+++ b/downloads.html
@@ -193,7 +193,7 @@
                             <!-- This is what your users will see when the form-->
                             <!-- has successfully submitted-->
                             <div class="d-none" id="betaFormSubmitSuccessMessage">
-                                <div class="text-center mb-3"><div class="fw-bolder">Thank you for applying</div></div>
+                                <div class="text-center mb-3"><div class="fw-bolder">Please check your email. Thank you!</div></div>
                             </div>
                             <!-- Submit error message-->
                             <!---->
@@ -262,7 +262,7 @@
             betaForm.addEventListener('submit', betaFormSubmit);
         </script>
         <script defer src="/js/bootstrap.bundle.min.js"></script>
-        <script defer src="/gtag.js"></script>
+        <script defer src="/js/gtag.js"></script>
         <script>
             var isContactPage = typeof isContactPage !== 'undefined';
             //console.log(isContactPage);
