--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                                     <img class="d-block w-100" src="/img/Screenshots/Android/2.jpg" alt="Screenshot 3" loading="lazy" style="border-radius: 25px" />
                                                     <div class="carousel-caption d-md-block" style="margin-bottom: 40px">
                                                         <p class="fw-bolder lead" style="color: #2937f0">Preview Text!</p>
-                                                        <p style="color: rgb(33, 37, 41)">Preview text from directly from the app. Open with a text editor to save changes.</p>
+                                                        <p style="color: rgb(33, 37, 41)">Preview text directly from the app. Open with a text editor to save changes.</p>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
@@ -277,7 +277,7 @@
                                                     <img class="d-block w-100" src="/img/Screenshots/IPhone/2.jpg" alt="Screenshot 3" loading="lazy" style="border-radius: 25px" />
                                                     <div class="carousel-caption d-md-block" style="margin-bottom: 60px">
                                                         <p class="fw-bolder lead" style="color: #2937f0">Preview Text!</p>
-                                                        <p style="color: rgb(33, 37, 41)">Preview text from directly from the app. Open with a text editor to save changes.</p>
+                                                        <p style="color: rgb(33, 37, 41)">Preview text directly from the app. Open with a text editor to save changes.</p>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
